--- a/src/components/Footer/styles.module.css
+++ b/src/components/Footer/styles.module.css
@@ -6,6 +6,7 @@
   box-sizing: border-box;
   overflow: hidden;
   flex-shrink: 0;
+  -webkit-font-smoothing: antialiased;
 }
 .footer * {
   color: #ffffff;
