--- a/src/pages/styles/main.css
+++ b/src/pages/styles/main.css
@@ -1,3 +1,5 @@
+@import url('https://fonts.googleapis.com/css2?family=Noto+Sans:wght@400;700&display=swap');
+
 :root {
   --regular-color: #78909c;
 
