--- a/src/components/Article/styles.module.css
+++ b/src/components/Article/styles.module.css
@@ -14,6 +14,12 @@
   text-decoration: none;
 }
 
+@media only screen and (max-width: 1600px) {
+  .article {
+    zoom: 95%;
+  }
+}
+
 @media only screen and (min-width: 550px) {
   .article:hover {
     transform: translateY(-0.25rem);
