--- a/src/components/Logo/styles.module.css
+++ b/src/components/Logo/styles.module.css
@@ -11,12 +11,13 @@
 }
 
 .icon {
-  padding: 0.5rem 0;
-  margin-right: 1rem;
+  padding: 0.6rem 0;
+  margin-right: 0.85rem;
 }
 
 .header {
-  font-size: 1.3rem;
+  font-size: 1.4rem;
+  font-weight: 500;
 }
 
 @media only screen and (max-width: 20rem) {
