--- a/src/components/SearchResults/styles.module.css
+++ b/src/components/SearchResults/styles.module.css
@@ -1,6 +1,15 @@
 .searchContainer {
   padding: 2.5rem 1.25rem;
 }
+@media only screen and (max-width: 40rem) {
+  .searchContainer {
+    padding: 0;
+    padding-top: 2.5rem;
+  }
+  .searchMiscRow {
+    padding-left: 1.25rem;
+  }
+}
 
 .searchMiscRow {
   margin-bottom: 2rem;
@@ -25,32 +34,30 @@
   box-sizing: border-box;
   padding: 0.5rem 0;
 }
-.backButton:hover {
-  transform: translateX(-0.25rem);
-}
 
 .backButton svg {
   display: block;
   float: left;
-  fill: var(--supermedium-color);
+  fill: var(--dark-color);
   height: 100%;
   width: auto;
   display: block;
   transform: scale(-1, 1);
-  transition: fill 0.2s ease-in-out;
+  opacity: 0.35;
+  transition: opacity 0.2s ease-in-out;
 }
 .backButton:hover svg {
-  fill: var(--blue-color);
+  opacity: 0.85;
 }
 .backButton:focus svg,
 .backButton:active svg {
-  fill: var(--dark-blue-color);
+  opacity: 0.85;
 }
 
 .searchHeader {
-  font-size: 1.125rem;
-  line-height: 2.3rem;
-  height: 2.5rem;
+  font-size: 1.35rem;
+  line-height: 2.7rem;
+  height: 2.7rem;
   padding-bottom: 0.25rem;
   position: relative;
   max-width: calc(100% - 2.7rem - 1rem);
@@ -59,28 +66,15 @@
   white-space: nowrap;
 }
 
-.searchHeader,
-.searchHeader > * {
-  color: var(--blue-color);
-}
-.searchHeader:after {
-  --bottom-line-width: 2.5rem;
-  content: '';
-  position: absolute;
-  bottom: 0;
-  display: block;
-  height: 0.25rem;
-  width: var(--bottom-line-width);
-  left: calc((100% - var(--bottom-line-width)) / 2);
-  border-radius: 0.25rem;
-  background-color: var(--blue-color);
+.searchHeader strong {
+  font-weight: 600;
 }
 @media only screen and (max-width: 550px) {
   .backButton {
     margin-right: 0.75rem;
   }
   .searchHeader {
-    font-size: 0.95rem;
+    font-size: 1.2rem;
     max-width: calc(100% - 2.7rem - 0.75rem);
   }
 }
