--- a/src/pages/styles/main.css
+++ b/src/pages/styles/main.css
@@ -1,4 +1,4 @@
-@import url('https://fonts.googleapis.com/css2?family=Noto+Sans:wght@400;700&display=swap');
+@import url('https://fonts.googleapis.com/css2?family=Inter:wght@400;500;600;700&display=swap');
 
 :root {
   --regular-color: #78909c;
@@ -28,8 +28,7 @@
 * {
   margin: 0;
   padding: 0;
-  font-family: 'Noto Sans', -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue',
-    sans-serif;
+  font-family: 'Inter', -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
   color: var(--dark-color);
 }
 svg {
@@ -38,4 +37,8 @@ svg {
 
 ::selection {
   background-color: var(--shadow-color);
+}
+
+.select-section {
+  padding: 2rem 1rem;
 }
