--- a/src/pages/styles/main.css
+++ b/src/pages/styles/main.css
@@ -1,6 +1,3 @@
-@tailwind base;
-@tailwind components;
-@tailwind utilities;
 @import url('https://fonts.googleapis.com/css2?family=Inter:wght@400;500;600;700&display=swap');
 
 :root {
@@ -44,4 +41,10 @@ svg {
 
 .select-section {
   padding: 2rem 1rem;
+}
+
+@media only screen and (max-width: 979px) {
+  body {
+    padding-bottom: 3rem;
+  }
 }
