--- a/src/components/Footer/styles.module.css
+++ b/src/components/Footer/styles.module.css
@@ -5,6 +5,7 @@
   transform: translateY(calc(100% - 2.5rem));
   transition: all 0.2s;
   width: 100%;
+  z-index: 100;
 }
 @media only screen and (max-width: 979px) {
   .footerOuter {
