--- a/src/pages/styles/main.css
+++ b/src/pages/styles/main.css
@@ -48,3 +48,48 @@ svg {
     padding-bottom: 3rem;
   }
 }
+
+.text-section {
+  margin: 1.25rem 0;
+  padding: 3rem 1.5rem;
+  margin: 0 auto;
+  width: 100%;
+  max-width: 800px;
+}
+@media only screen and (min-width: 750px) {
+  .text-section {
+    padding: 1.75rem 2rem;
+    box-shadow: 0 0.15rem 0.6rem var(--shadow-color);
+    border-radius: 6px;
+  }
+}
+.text-section > * {
+  font-size: 1.05rem;
+  line-height: 1.75;
+}
+.text-section > h1 {
+  font-size: 2rem;
+  text-align: center;
+  font-weight: 600;
+  line-height: 1.4;
+}
+.text-section a {
+  color: var(--blue-color);
+  border-bottom: 1px solid var(--light-color);
+  transition: all 0.2s;
+}
+.text-section a:hover {
+  color: var(--dark-blue-color);
+  border-color: var(--light-blue-color);
+}
+.text-section > *:not(:last-child) {
+  margin-bottom: 1.25rem;
+}
+
+.text-section > h2 {
+  font-size: 1.65rem;
+  font-weight: 600;
+  line-height: 1.4;
+  margin-top: 2rem;
+  margin-bottom: 1rem !important;
+}
